2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* storage/exchange-autoconfig-wizard.c:
	* storage/exchange-config-listener.h:
	* storage/exchange-delegates-control.h:
	use libedataserver/e-account-list.h instead of e-util/e-account-list.h.
	use libedataserver/e-account.h instead of e-util/e-account.h.

2006-01-06  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-folder.c (exchange_expunge): Expunge deleted
	items from all folders. Fixes #273546.

2006-01-06  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange.c (load_cache): Returning error
	code on any failures. Return if fail to read the cache file
	corresponding to the folder.
	(open_calendar): Return the status of load_cache instead of success
	always.
	(set_mode): Set the mode, writable status and notify mode always.
	Fixes.
	In case of local mode, set the account status to offline and call
	exchange_account_connect, so that folder hierarchy is set and loading
	the cache file succeeds.
	Fixes #325717, #325726.

2006-01-04  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes two crashes and appearance of recurring exception events.
	* calendar/e-cal-backend-exchange-calendar.c (get_changed_events):
	Get the changed events for instances and instances with no master 
	object.
	(modify_object_with_href): If modifying a master object of recurrence get
	the object string from updated_comp.
	(receive_objects): check if the rid is present before converting to string.
	* calendar/e-cal-backend-exchange.c: (get_object): Check if it has
	a master component before adding it in the vcalendar.

2006-01-02  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.4
	* NEWS : Updated

2005-12-29  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ca" "da" "mk" "ru" "vi" "zh_HK" to ALL_LINGUAS.

2005-12-23  Simon Zheng  <simon.zheng@sun.com>

	* storage/exchange-component.c (impl_createView): changed
	from createControls for new shell apis.
 